[gd_scene format=3 uid="uid://bmw87skbskdl0"]

[ext_resource type="Theme" uid="uid://itmgkfdfuwrs" path="res://assets/theme/test.tres" id="1_ks8ny"]
[ext_resource type="Texture2D" uid="uid://bhrjwaf2fsy8k" path="res://assets/texture/icon.png" id="2_oxsv8"]
[ext_resource type="Script" uid="uid://boluayyjx73pp" path="res://Test_Motion.gd" id="2_qlwqs"]
[ext_resource type="PackedScene" uid="uid://dbysni1gt5a3y" path="res://prefabs/Graph2D.tscn" id="4_6hrad"]
[ext_resource type="PackedScene" uid="uid://bfrjkr0lkkxue" path="res://prefabs/Posture2D.tscn" id="4_21lyc"]
[ext_resource type="PackedScene" uid="uid://ccsi3oldhplyl" path="res://prefabs/Posture3D.tscn" id="6_76lh4"]
[ext_resource type="PackedScene" uid="uid://dr8vjsamb0p6n" path="res://prefabs/Transition.tscn" id="6_r2onw"]
[ext_resource type="PackedScene" uid="uid://bkp18is5skvl3" path="res://prefabs/Graph1D.tscn" id="7_oxsv8"]

[sub_resource type="SystemFont" id="SystemFont_ks8ny"]

[node name="Test_Motion" type="MarginContainer" unique_id=1691496380]
texture_filter = 1
texture_repeat = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ks8ny")
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 32
script = ExtResource("2_qlwqs")
color_marker_start = Color(0.0841232, 0.23724473, 0.1930371, 1)
color_marker_end = Color(0.3019608, 0.1254902, 0.25490198, 1)

[node name="Container" type="VBoxContainer" parent="." unique_id=225815226]
layout_mode = 2

[node name="Header" type="VBoxContainer" parent="Container" unique_id=798060418]
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="Container/Header" unique_id=1212137048]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Container/Header/Title" unique_id=318547336]
layout_mode = 2
texture = ExtResource("2_oxsv8")
stretch_mode = 3

[node name="Text" type="Label" parent="Container/Header/Title" unique_id=711380776]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ks8ny")
theme_override_font_sizes/font_size = 18
text = "GDUT Motion"
vertical_alignment = 1

[node name="Description" type="HBoxContainer" parent="Container/Header" unique_id=89108556]
layout_mode = 2

[node name="Padding" type="Control" parent="Container/Header/Description" unique_id=1776256930]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Text" type="Label" parent="Container/Header/Description" unique_id=1029097970]
layout_mode = 2
text = "This add-on animates any property or method using easing and continuous physics-based transition."

[node name="Separator_1" type="HSeparator" parent="Container" unique_id=181443007]
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="Container" unique_id=594054200]
layout_mode = 2

[node name="Padding" type="Control" parent="Container/Content" unique_id=1814668109]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Column" type="VBoxContainer" parent="Container/Content" unique_id=1799303029]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 32

[node name="Content_2D" type="HBoxContainer" parent="Container/Content/Column" unique_id=1411612233]
layout_mode = 2

[node name="Posture2D_Transition" parent="Container/Content/Column/Content_2D" unique_id=1857888207 instance=ExtResource("6_r2onw")]
unique_name_in_owner = true
layout_mode = 2

[node name="Controller" type="HBoxContainer" parent="Container/Content/Column/Content_2D/Posture2D_Transition" unique_id=1163063595]
layout_mode = 2
size_flags_vertical = 3

[node name="Posture2D_Cancel" type="Button" parent="Container/Content/Column/Content_2D/Posture2D_Transition/Controller" unique_id=320521138]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Cancel"

[node name="Posture2D_Start" type="Button" parent="Container/Content/Column/Content_2D/Posture2D_Transition/Controller" unique_id=2127015898]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Posture2D" parent="Container/Content/Column/Content_2D" unique_id=1920342791 instance=ExtResource("4_21lyc")]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Posture2D_Graph" parent="Container/Content/Column/Content_2D" unique_id=1865317291 instance=ExtResource("7_oxsv8")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
update_interval = 5
level_color = Color(0.16924527, 0.1692453, 0.16924527, 1)
level_array = Array[float]([3.142, 1.571, 0.0, -1.571, -3.142])
max_level = 3.5
min_level = -3.5

[node name="Content_3D" type="HBoxContainer" parent="Container/Content/Column" unique_id=1252978433]
layout_mode = 2

[node name="Posture3D_Transition" parent="Container/Content/Column/Content_3D" unique_id=313126498 instance=ExtResource("6_r2onw")]
unique_name_in_owner = true
layout_mode = 2

[node name="Controller" type="HBoxContainer" parent="Container/Content/Column/Content_3D/Posture3D_Transition" unique_id=367276903]
layout_mode = 2

[node name="Posture3D_Cancel" type="Button" parent="Container/Content/Column/Content_3D/Posture3D_Transition/Controller" unique_id=1822233050]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Cancel"

[node name="Posture3D_Start" type="Button" parent="Container/Content/Column/Content_3D/Posture3D_Transition/Controller" unique_id=2042564500]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="Posture3D" parent="Container/Content/Column/Content_3D" unique_id=1299880624 instance=ExtResource("6_76lh4")]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="Posture3D_Graph" parent="Container/Content/Column/Content_3D" unique_id=1560272811 instance=ExtResource("4_6hrad")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
update_interval = 5
level_color = Color(0.16862746, 0.16862746, 0.16862746, 1)
level_array = Array[float]([3.142, 1.571, 0.0, -1.571, -3.142])
max_level = 3.5
min_level = -3.5

[connection signal="pressed" from="Container/Content/Column/Content_2D/Posture2D_Transition/Controller/Posture2D_Cancel" to="." method="_on_posture_2d_cancel_pressed"]
[connection signal="pressed" from="Container/Content/Column/Content_2D/Posture2D_Transition/Controller/Posture2D_Start" to="." method="_on_posture_2d_start_pressed"]
[connection signal="pressed" from="Container/Content/Column/Content_3D/Posture3D_Transition/Controller/Posture3D_Cancel" to="." method="_on_posture_3d_cancel_pressed"]
[connection signal="pressed" from="Container/Content/Column/Content_3D/Posture3D_Transition/Controller/Posture3D_Start" to="." method="_on_posture_3d_start_pressed"]

[editable path="Container/Content/Column/Content_2D/Posture2D_Transition"]
[editable path="Container/Content/Column/Content_3D/Posture3D_Transition"]
